lang/src/ast/snapshots/rain_lang__ast__test__let_type_spec.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        let a: B = 5\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  Assignment(
   Name(
    a
    TypeSpec(
     Ident(
      B
     )
    )
   )
   IntegerLiteral(
    5
   )
  )
 )
)
