lang/src/ast/snapshots/rain_lang__ast__test__list_constructor_nested.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"[a, b, 123, [567, d]]\")"
---
List(
 ListElement(
  Ident(
   a
  )
 )
 ListElement(
  Ident(
   b
  )
 )
 ListElement(
  IntegerLiteral(
   123
  )
 )
 ListElement(
  List(
   ListElement(
    IntegerLiteral(
     567
    )
   )
   ListElement(
    Ident(
     d
    )
   )
  )
 )
)
