lang/src/ast/snapshots/rain_lang__ast__test__list_constructor_nested_nls.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"[a\\n, b,\\n 123, // comment \\n [\\n567, d]\\n]\")"
---
List(
 ListElement(
  Ident(
   a
  )
 )
 ListElement(
  Ident(
   b
  )
 )
 ListElement(
  IntegerLiteral(
   123
  )
 )
 ListElement(
  List(
   ListElement(
    IntegerLiteral(
     567
    )
   )
   ListElement(
    Ident(
     d
    )
   )
  )
 )
)
