lang/src/ast/snapshots/rain_lang__ast__test__logical_operators.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"true || a == b && 1 != 1 && (false || a != b)\")"
---
BinaryOp(
 TrueLiteral(
 )
 ||
 BinaryOp(
  BinaryOp(
   BinaryOp(
    Ident(
     a
    )
    ==
    Ident(
     b
    )
   )
   &&
   BinaryOp(
    IntegerLiteral(
     1
    )
    !=
    IntegerLiteral(
     1
    )
   )
  )
  &&
  BinaryOp(
   FalseLiteral(
   )
   ||
   BinaryOp(
    Ident(
     a
    )
    !=
    Ident(
     b
    )
   )
  )
 )
)
