lang/src/ast/snapshots/rain_lang__ast__test__maths_parens1.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"1 - (a + 3) * 4\")"
---
BinaryOp(
 IntegerLiteral(
  1
 )
 -
 BinaryOp(
  BinaryOp(
   Ident(
    a
   )
   +
   IntegerLiteral(
    3
   )
  )
  *
  IntegerLiteral(
   4
  )
 )
)
