lang/src/ast/snapshots/rain_lang__ast__test__maths_parens2.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"(3 - b) * c\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   3
  )
  -
  Ident(
   b
  )
 )
 *
 Ident(
  c
 )
)
