lang/src/ast/snapshots/rain_lang__ast__test__not_and_operation.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"false && !!!true || !false\")"
---
BinaryOp(
 BinaryOp(
  FalseLiteral(
  )
  &&
  Not(
   Not(
    Not(
     TrueLiteral(
     )
    )
   )
  )
 )
 ||
 Not(
  FalseLiteral(
  )
 )
)
