lang/src/ast/snapshots/rain_lang__ast__test__not_dot_plus_expr.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"!a.b + d\")"
---
BinaryOp(
 Not(
  Namespace(
   Ident(
    a
   )
   .
   b
  )
 )
 +
 Ident(
  d
 )
)
