lang/src/ast/snapshots/rain_lang__ast__test__not_not_or_operation.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"!!a || b\")"
---
BinaryOp(
 Not(
  Not(
   Ident(
    a
   )
  )
 )
 ||
 Ident(
  b
 )
)
