lang/src/ast/snapshots/rain_lang__ast__test__not_or_operation.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"!a || b\")"
---
BinaryOp(
 Not(
  Ident(
   a
  )
 )
 ||
 Ident(
  b
 )
)
